[workspace]
members = [
	"engine",
	"ffi",
	"fuzz/bytes",
	"fuzz/raw-string",
	"fuzz/map-keys",
	"wasm",
]
resolver = "2"

[workspace.package]
authors = [ "Ingvar Stepanyan <me@rreverser.com>" ]
version = "0.7.0"
publish = true
edition = "2021"

[workspace.dependencies]
backtrace = "0.3"
cfg-if = "1"
cidr = { version = "0.2", features = ["serde"] }
criterion = "0.5"
fnv = "1.0.6"
indoc = "2"
hashbrown = { version = "0.15", features = ["serde"] }
libc = "0.2.42"
memchr = { version = "2.7.4", default-features = false }
num_enum = "0.7"
rand = "0.8"
regex = { version = "1.3.6" }
serde = { version = "1.0.113", features = [ "derive" ] }
serde_json = "1.0.56"
sliceslice = "0.4.3"
thiserror = { version = "2.0", features = [], default-features = false }
wildcard = "0.2.0"
wirefilter = { path = "engine", package = "wirefilter-engine" }

[profile.release]
panic = "unwind"
lto = true

[profile.dev]
panic = "unwind"
